# 3dSt_Coder

./: .gitignore  BROWSER_SETUP.md  CLAUDE.md  Dockerfile  First.txt  IMPLEMENTATION_SUMMARY.md  README.md  SETUP_STATUS.md  Setup.txt  VSCode Setup.txt  conftest.py  demo_hybrid_subagents.py  install-and-test.ps1  manifest.txt  pyproject.toml  run_tests.py  start_mistral.py  start_saul.py  start_with_ollama.py  test_all.py  test_hybrid_subagents.py  test_performance.py  test_subagent_integration.py
.claude/: settings.local.json
.claude/agents/: custom-analyzer.md  doc-generator.md
.github/workflows/: ci.yml
agent/: __init__.py  configured_subagent.py  core.py  file_processor.py  memory.py  orchestrator.py  schemas.py  subagent.py  subagent_config.py  task_detector.py
agent/tests/: __init__.py  test_core.py  test_parallel.py  test_parallel_e2e.py  test_parallel_integration.py  test_parallel_performance.py  test_subagent_config.py
agent/tools/: __init__.py  file.py  git.py  parallel.py  shell.py  test_runner.py
api/: __init__.py  main.py  router.py
api/tests/: __init__.py  conftest.py  test_api.py
auth/: __init__.py  database.py  middleware.py  models.py  network.py  router.py  security.py
auth/tests/: __init__.py  test_network.py  test_security.py
data/: auth.db
data/conversations/: default.db  default_2.db
docs/: HYBRID_SUBAGENTS.md  PARALLEL_ARCHITECTURE.md  QUICK_START.md  SECURITY.md  SETUP.md  TROUBLESHOOTING.md  USER_GUIDE.md  quick-start-infographic.html
llm_server/: __init__.py  config.py  engine_factory.py  inference.py  multi_engine.py  ollama_engine.py  openai_engine.py  schemas.py
llm_server/tests/: __init__.py  test_inference.py
scripts/: __init__.py  create_admin.py
static/: index.html
ui/: README.md
